@@ -1,3 +1,8 @@
+2011-09-30  Marek Polacek  <mpolacek@redhat.com>
+
+	* gdb.python/python.exp (verify pagination beforehand)
+	(verify pagination afterwards): Fix race by splitting the line.
+
 2011-09-29  Joseph Myers  <joseph@codesourcery.com>
 
 	* lib/gdb.exp (is_amd64_regs_target, is_x86_like_target): Allow
